Fixed timeline marker positioning, menu size and positioning

--- a/src/components/timeline/timeline.css
+++ b/src/components/timeline/timeline.css
@@ -6,6 +6,8 @@
     display: flex;
     flex-direction: column;
     padding-top: var(--unit-width);
+
+    position: relative;
 }
 
 #timeline-container #line {
