--- a/src/style.css
+++ b/src/style.css
@@ -7,7 +7,7 @@ menu-component {
     position: absolute;
     top: 0;
     left: 0;
-    width: 350px;
-    height: 350px;
+    width: 100%;
+    height: 12ch;
     background: white;
 }
